# tennis_coach_app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: general-rules.mdc
.github/workflows/: ci.yml  deploy-frontend.yml  docker-publish.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/models/: __init__.py
backend/app/api/routes/: analysis.py  video.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  analysis.py  video.py
backend/app/services/: analysis_service.py  cv_service.py  video_service.py
backend/tennis_analysis_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_video_api.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: AnalysisDashboard.css  AnalysisDashboard.tsx  AnalysisModal.css  AnalysisModal.tsx  AnalysisResults.css  AnalysisResults.tsx  Icons.tsx  VideoList.css  VideoList.tsx  VideoPlayer.css  VideoPlayer.test.tsx  VideoPlayer.tsx  VideoUpload.css  VideoUpload.tsx
frontend/src/services/: api.ts
frontend/src/types/: video.ts
project_docs/: api_documentation.md  cursor_rules_migration.md  database_schema.md  deployment_guide.md  project_plan.md  react_frontend_guide.md  testing_guide.md
